# xnotes-android

./: .gitignore  LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/scm/: cpp.scm
app/src/main/cpp/: CMakeLists.txt  THIRD_PARTY  ts_jni.c
app/src/main/java/com/xnotes/: MainActivity.kt
app/src/main/java/com/xnotes/canvas/: CanvasState.kt  CanvasView.kt  DebugOverlay.kt  FlowInput.kt  FlowTextController.kt  InteractionController.kt  PdfColorFilter.kt  ResizeMath.kt  Ruler.kt  SelectionMath.kt  ViewSettings.kt
app/src/main/java/com/xnotes/core/geometry/: Affine.kt  Geometry.kt  Obb.kt
app/src/main/java/com/xnotes/core/history/: Command.kt  FlowCommands.kt  History.kt
app/src/main/java/com/xnotes/core/model/: CanvasItem.kt  Clone.kt  Document.kt  ImageData.kt  ImageItem.kt  Page.kt  PagePatternPainter.kt  PageStyle.kt  ShapeItem.kt  Stroke.kt  TextItem.kt
app/src/main/java/com/xnotes/core/pal/: ImageCodec.kt  Renderer.kt  Text.kt  TextMeasurer.kt
app/src/main/java/com/xnotes/core/stroke/: CubicFit.kt  CurveFit.kt  EllipseArcFit.kt  ShapeRecognizer.kt  SplineFit.kt  StrokeEngine.kt  StrokeGeometry.kt
app/src/main/java/com/xnotes/core/text/: CodeHighlighter.kt  FlowEditor.kt  FlowFrame.kt  FlowLayout.kt  FlowPainter.kt  MarkdownParser.kt  TextFlow.kt
app/src/main/java/com/xnotes/core/tools/: InkPalette.kt  ShapeConfig.kt  Tool.kt  ToolConfig.kt  ToolbarLayout.kt
app/src/main/java/com/xnotes/core/util/: Paths.kt
app/src/main/java/com/xnotes/format/: DocumentCodec.kt  FlowXml.kt  HelixTheme.kt
app/src/main/java/com/xnotes/platform/: AndroidImageCodec.kt  AndroidRenderer.kt  AndroidText.kt  AndroidTextMeasurer.kt  AppStorageDocumentsProvider.kt  DeviceCapabilities.kt  FontCatalog.kt  ImageDecoder.kt  NoteThumbnailCache.kt  Pdf.kt  PdfBoxRenderer.kt  PdfOutline.kt  PdfSource.kt  PresentationServer.kt  RecentThumbnailCache.kt  SessionStore.kt  TreeSitter.kt  ViewSettingsJson.kt  ViewStateStore.kt
app/src/main/java/com/xnotes/presentation/: PresentationController.kt  PresentationFrameSource.kt
app/src/main/java/com/xnotes/settings/: Preferences.kt  Settings.kt  SettingsRepository.kt
app/src/main/java/com/xnotes/ui/: AboutPane.kt  Backstage.kt  CanvasMenus.kt  ColorPicker.kt  Editor.kt  ExplorerSort.kt  Popups.kt  PreferencesDialog.kt  PreferencesPane.kt  PresentationDialog.kt  SidePanel.kt  TextEditorOverlay.kt  TextFormatBar.kt  TextStyleBar.kt  TextToolConfigPopup.kt  Toolbar.kt  ToolbarCustomizer.kt  XnotesLoader.kt
app/src/main/java/com/xnotes/ui/icons/: XnotesIcons.kt
app/src/main/java/com/xnotes/ui/theme/: Palette.kt  XnotesTheme.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_stroke_dashed.xml  splash_blank.xml  xnotes_loader.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-v31/: themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/xnotes/canvas/: DocumentEndVisibleTest.kt  FitWidthSnapTest.kt  FlowInkBakeTest.kt  InitialViewTest.kt  PaginatedLayoutTest.kt  PdfColorFilterTest.kt  ResizeMathTest.kt  RotationMappingTest.kt  RulerTest.kt  SelectionCacheRepairTest.kt  SelectionMathTest.kt  SharpViewportEditReplayTest.kt  UndoCacheRepairTest.kt  ViewingModeLayoutTest.kt
app/src/test/java/com/xnotes/core/: Fakes.kt  TextPalFakesTest.kt
app/src/test/java/com/xnotes/core/geometry/: AffineTest.kt  GeometryTest.kt  ObbTest.kt
app/src/test/java/com/xnotes/core/history/: HistoryTest.kt
app/src/test/java/com/xnotes/core/model/: ItemTransformTest.kt  ModelItemsTest.kt  NeonPaintBoundsTest.kt
app/src/test/java/com/xnotes/core/stroke/: CubicFitTest.kt  CurveFitTest.kt  EllipseArcFitTest.kt  ShapeRecognizerTest.kt  SplineFitTest.kt  (+1 more)
app/src/test/java/com/xnotes/format/: DocumentCodecTest.kt  FlowXmlTest.kt  HelixThemeTest.kt
app/src/test/java/com/xnotes/platform/: SessionStoreTest.kt  ViewStateStoreTest.kt
app/src/test/java/com/xnotes/settings/: SettingsTest.kt
app/src/test/java/com/xnotes/ui/: ExplorerSortTest.kt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 19.txt  20.txt  21.txt  22.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  40.txt  41.txt
fdroid/: com.xnotes.yml
github/workflows/: build-apk.yml
gradle/: libs.versions.toml
(+10 files in other folders)
